--- a/BT - Game puzzle/index.html
+++ b/BT - Game puzzle/index.html
@@ -69,7 +69,7 @@
         if (((anh1 === 'http://127.0.0.1:5500/BT%20-%20Game%20puzzle/1_1.png') && (anh2 === 'http://127.0.0.1:5500/BT%20-%20Game%20puzzle/1_2.png') && (anh3 === 'http://127.0.0.1:5500/BT%20-%20Game%20puzzle/1_3.png'))
             || ((anh1 === 'http://127.0.0.1:5500/BT%20-%20Game%20puzzle/2_1.png') && (anh2 === 'http://127.0.0.1:5500/BT%20-%20Game%20puzzle/2_2.png') && (anh3 === 'http://127.0.0.1:5500/BT%20-%20Game%20puzzle/2_3.png'))
             || ((anh1 === 'http://127.0.0.1:5500/BT%20-%20Game%20puzzle/3_1.png') && (anh2 === 'http://127.0.0.1:5500/BT%20-%20Game%20puzzle/3_2.png') && (anh3 === 'http://127.0.0.1:5500/BT%20-%20Game%20puzzle/3_3.png'))) {
-            alert('Chuẩn');
+            setTimeout(function () { alert('Chuẩn') }, 300);
         };
 
 
