--- a/BT - Luyện tập cấu trúc điều kiện 01/Bài 5.html
+++ b/BT - Luyện tập cấu trúc điều kiện 01/Bài 5.html
@@ -15,9 +15,9 @@
         let diemphay = (kiemtra + thigiuaky + thicuoiky * 2) / 4;
         if (diemphay >= 8.0) {
             alert(diemphay + ' Học sinh giỏi');
-        } else if ((diemphay >= 6.5) && (diemphay < 8)) {
+        } else if (diemphay >= 6.5) {
             alert(diemphay + ' Học sinh khá');
-        } else if ((diemphay >= 5.0) && (diemphay < 6.5)) {
+        } else if (diemphay >= 5.0) {
             alert(diemphay + ' Học sinh trung bình');
         } else if (diemphay < 5) {
             alert(diemphay + ' Học sinh yếu')
