--- a/BT - Luyện tập cấu trúc điều kiện 01/Bài 6.html
+++ b/BT - Luyện tập cấu trúc điều kiện 01/Bài 6.html
@@ -14,7 +14,7 @@
         const dongia = 500000;
         if (soluong <= 10) {
             tienhoahong = dongia * soluong * 5 / 100;
-        } else if ((soluong > 10) && (soluong <= 20)) {
+        } else if (soluong <= 20) {
             tienhoahong = dongia * soluong * 10 / 100;
         } else if (soluong > 20) {
             tienhoahong = dongia * soluong * 20 / 100;
